add: Gradle plugin